Added levels list

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 
-			<main class="main-content">
+			<main id="root" class="main-content">
 				<div class="fullwidth-block cooking-section category-block">
 					<div class="container">
 						<figure><img src="dummy/abc.jpg" alt="abc"></figure>
@@ -129,6 +129,7 @@
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/plugins.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js_john/dist/bundle.js"></script>
 
 	</body>
 
